# omnilang

./: .gitignore  README.md  pyproject.toml
src/omnilang/: cli.py  common_utils.py
src/omnilang/core/: converter.py  extractor.py  helper.py  underscore_fixer.py
src/omnilang/core/utils/: language_map.py
